# ipp-poly

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md
docs/: README_8md_source.html  annotated.html  annotated_dup.js  array__lists_8c_source.html  array__lists_8h.html  array__lists_8h__dep__incl.map  array__lists_8h__dep__incl.md5  array__lists_8h__incl.map  array__lists_8h__incl.md5  array__lists_8h_a10636e7e8950610ae36ddfb02750e764_cgraph.map  array__lists_8h_a10636e7e8950610ae36ddfb02750e764_cgraph.md5  array__lists_8h_a2303e9b7706c4dd846f19e5ae3cd41f7_cgraph.map  array__lists_8h_a2303e9b7706c4dd846f19e5ae3cd41f7_cgraph.md5  array__lists_8h_a32a12c2c2ef40b270a7cac4893887db6_cgraph.map  array__lists_8h_a32a12c2c2ef40b270a7cac4893887db6_cgraph.md5  array__lists_8h_a3a3515963a20e063dadaa4faf05827e5_cgraph.map  array__lists_8h_a3a3515963a20e063dadaa4faf05827e5_cgraph.md5  array__lists_8h_a3cb5b8fcf0beaac3b16b06dbff16cd19_cgraph.map  array__lists_8h_a3cb5b8fcf0beaac3b16b06dbff16cd19_cgraph.md5  array__lists_8h_a4c9e199b2f5ce7a8edce508fb65758db_cgraph.map  array__lists_8h_a4c9e199b2f5ce7a8edce508fb65758db_cgraph.md5  array__lists_8h_a89e242a933a16e73463ac6ef9b29d4c2_cgraph.map  array__lists_8h_a89e242a933a16e73463ac6ef9b29d4c2_cgraph.md5  array__lists_8h_a8a8289c6775de33aed1c07d57157bde8_cgraph.map  array__lists_8h_a8a8289c6775de33aed1c07d57157bde8_cgraph.md5  array__lists_8h_a970058052812d257289276ef3f0f1681_cgraph.map  array__lists_8h_a970058052812d257289276ef3f0f1681_cgraph.md5  array__lists_8h_a9c3a627d4bc29a1187aef29138e7850b_cgraph.map  array__lists_8h_a9c3a627d4bc29a1187aef29138e7850b_cgraph.md5  array__lists_8h_ab0ce2d280a11f93401a63671d65e1ec7_cgraph.map  array__lists_8h_ab0ce2d280a11f93401a63671d65e1ec7_cgraph.md5  array__lists_8h_adfacbe54d0522ef45e9ab231e2d261f5_cgraph.map  array__lists_8h_adfacbe54d0522ef45e9ab231e2d261f5_cgraph.md5  array__lists_8h_ae024e0413c65c81ee1eff0f290830bad_cgraph.map  array__lists_8h_ae024e0413c65c81ee1eff0f290830bad_cgraph.md5  array__lists_8h_aff5f60502e33537a66cd5fc7c715d225_cgraph.map  array__lists_8h_aff5f60502e33537a66cd5fc7c715d225_cgraph.md5  array__lists_8h_source.html  calc__interpreter_8c_source.html  calc__interpreter_8h.html  (+304 more)
docs-template/: customdoxygen.css  doxy-boot.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_1.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  pages_1.js  search.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  (+3 more)
release/: CMakeCache.txt  Makefile  cmake_install.cmake
shell/: chain_poly.sh
src/: array_lists.c  array_lists.h  calc_interpreter.c  calc_interpreter.h  calc_poly.c  dynamic_lists.c  dynamic_lists.h  generics.h  list.c  list.h  list.h.gch  math_utils.h  memalloc.c  memalloc.h  plist.c  plist.h  poly.c  poly.h  poly.h.gch  stack.h  strings.c  strings.h  strings.h.gch  test_poly.c  test_poly.new.c  test_poly.old.c  test_poly_my.c  utils.h  vector.c  vector.h
test_utils/: test_utils.c  test_utils.h
tests/: const_arr.h  test_poly.c  test_poly2.c  unit_tests_poly.c
